--- a/Simulador/nbproject/project.properties
+++ b/Simulador/nbproject/project.properties
@@ -38,7 +38,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.jfreechart.classpath}:\
+    ${libs.jfreechart_1.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
